Fix an issue where sequence downloads would reopen the image viewer window
This occurs since we want to update the node for the image in the
viewer. The image entry was previously immutable, but to avoid the image
viewer window reopening problem (and a flicker problem between high res
and low res images), it is no longer immutable.

Signed-off-by: Taylor Smock <tsmock@meta.com>